--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>My Name Is Joker ___ 1</h1>
 
     <h1>My Name Is sky</h1>
-    <blockquote>The sky is honestly the limit, so I'm excited to see what the future holds</blockquote>
+    <blockquote>The sky is honestly the limit, so I'm excited to see what the future holds – Emily Dickinson</blockquote>
 
 
 
